        PR c++/9993         * decl.c (finish_function): Only allow the NRVO to use variables         declared at function scope.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@64488 138bc75d-0d04-0410-961f-82ee72b054a4